--- a/.github/workflows/github-action-ec2.yml
+++ b/.github/workflows/github-action-ec2.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout the files
-        uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v2.5
 
       - name: Deploy to Server 1
         uses: easingthemes/ssh-deploy@main
