--- a/.github/workflows/github-action-ec2.yml
+++ b/.github/workflows/github-action-ec2.yml
@@ -8,11 +8,11 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to EC2 on master branch push
+    name: Deploy to EC2 on main branch push
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout the files
         uses: actions/checkout@v2.5
 
       - name: Deploy to Server 1
